- 
    
Bug
 - 
    Resolution: Done
 - 
    
P1: Critical
 - 
    5.8.0
 
When you have text selection handles visible and you hide Android virtual keyboard with 'back' key, then the handles stay visible. This is a nuisance especially if the handle covers something (see attached screenshot). This could be considered as regression, because the problem appeared in Qt 5.8.0 (due to larger change regarding text selection handle implementation).
Comparing to other Android applications, like gmail or calendar, the handles are not hidden either when the keyboard is hidden, but there the handles disappear after a short while (this happens always i.e. also when the keyboard is visible, but the handles are not used). Therefore I suggest to implement similar timeout mechanism to Qt Android port. It would fix this bug and improve the overall Android experience as well.
This problem was noticed with TextField item, but according to my understanding the same handles are used in other editors too. To reproduce, write some text to an editor and select/tap text such that a handler becomes visible, then hide the keyboard with the 'back' button.
- is duplicated by
 - 
                    
QTBUG-56745 Blue markers remain on android
-         
 - Closed
 
 -         
 
- relates to
 - 
                    
QTBUG-115498 [Android] Text selection handles stay visible after keyboard is hidden
-         
 - Reported
 
 -         
 - 
                    
QTBUG-62994 [iOS]: When some text is selected and you press outside the current text's area then it will still show the selection handles
-         
 - Closed
 
 -         
 
- resulted from
 - 
                    
QTBUG-34867 Android: Support proper selection/copy/cut/paste
-         
 - Closed
 
 -