Remove text selection handles when keyboard is hidden

Task-number: QTBUG-58700
Change-Id: I094f31250ec879b0f08f27499794946cac2084e6
Reviewed-by: Corey Pendleton <corey.pendleton@garmin.com>
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>